Readme, enet.h, CMakeLists.txt Updates
Updated the Readme.md to be very explanatory.
Updated enet.h to compile with MinGW on Windows.
Updated CMakeLists.txt to include necessary libraries when compiling on
Windows.

Added GenerateMakefiles.bat to automatically create makefiles using
CMake.
Added CompileServer.bat to use mingw32-make to make the server.

I am considering moving the batch files to the win directory .

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,13 @@
 cmake_minimum_required (VERSION 2.6)
 
 SET (CMAKE_CXX_COMPILER g++)
-set (CMAKE_CXX_FLAGS "-g -std=c++11")
+SET (CMAKE_CXX_FLAGS "-g -std=c++11")
 
-project (Intwars)
+IF(WIN32)
+  LINK_LIBRARIES(ws2_32)
+  LINK_LIBRARIES(winmm)
+ENDIF()
+project (IntWars)
 
 add_subdirectory(dep)
 add_subdirectory(gamed)
