--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,18 @@
 cmake_minimum_required (VERSION 2.6)
 
-SET (CMAKE_CXX_COMPILER g++)
-SET (CMAKE_CXX_FLAGS "-g -std=c++11")
+IF(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+  SET(CMAKE_CXX_FLAGS "-g -std=c++11 -pedantic")
+ELSEIF(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+  SET(CMAKE_CXX_FLAGS "/EHsc") #So it doesn't constantly throw warnings
+ELSEIF(CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
+  IF(WIN32)
+    SET(CMAKE_CXX_FLAGS "/Qstd=c++11")
+  ELSE()
+    SET(CMAKE_CXX_FLAGS "-std=c++11")
+  ENDIF()
+ELSEIF(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+  SET(CMAKE_CXX_FLAGS "-std=c++11")
+ENDIF()
 
 IF(WIN32)
   LINK_LIBRARIES(ws2_32)
