--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,27 @@
 *.ilk
 *.aps
 
+# Misc Visual Studio tmp/build related files 
+*_i.c
+*_p.c
+*.ilk
+*.meta
+*.pch
+*.pgc
+*.pgd
+*.rsp
+*.sbr
+*.tlb
+*.tli
+*.tlh
+*.tmp
+*.tmp_proj
+*.vspscc
+*.vssscc
+.builds
+*.pidb
+*.scc
+
 # Packages
 # it's better to unpack these files and commit the raw source
 # git has its own built in compression methods
@@ -28,6 +49,7 @@
 
 # Logs and databases
 *.log
+*.tlog
 *.sql
 *.sqlite
 
@@ -55,8 +77,10 @@ callgrind.out.*
 *.opensdf
 *.sln.cache
 *.vsp
-ipch
+ipch/
+*.cachefile
 *.user
+*.sln.docstates
 
 # Subversion data folders
 .svn/
@@ -75,3 +99,12 @@ cmake_install.cmake
 
 build/
 win/NetBeans/IntWars/nbproject/private/
+ 
+# Backup & report files from converting an old project file to a newer Visual Studio version
+_UpgradeReport_Files/
+Backup*/
+UpgradeLog*.XML
+UpgradeLog*.htm
+ 
+# Folder config file
+Desktop.ini
