--- a/dep/CMakeLists.txt
+++ b/dep/CMakeLists.txt
@@ -5,6 +5,20 @@ include_directories(include include/sol)
 include_directories(include include/raf)
 include_directories(include ../gamed/include)
 
+IF(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+  SET(CMAKE_CXX_FLAGS "-g -std=c++11 -pedantic")
+ELSEIF(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+  SET(CMAKE_CXX_FLAGS "/EHsc") #So it doesn't constantly throw warnings
+ELSEIF(CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
+  IF(WIN32)
+    SET(CMAKE_CXX_FLAGS "/Qstd=c++11")
+  ELSE()
+    SET(CMAKE_CXX_FLAGS "-std=c++11")
+  ENDIF()
+ELSEIF(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+  SET(CMAKE_CXX_FLAGS "-std=c++11")
+ENDIF()
+
 file(GLOB enet_src src/enet/*.c)
 file(GLOB intlib_src src/intlib/*.cpp)
 file(GLOB lua_src src/lua/*.c)
